# caffe

./: .gitignore  Anleitung.txt  CMakeLists.txt  Makefile  Makefile.config.old  README.md  data  rcnn  window_data_layer.cpp
caffe.xcodeproj/: project.pbxproj
examples/alphabet/: CMakeCache.txt  CMakeLists.txt  Makefile  alpha_solver.prototxt  alpha_train_text.prototxt2  cmake_install.cmake  generate.cpp  test-opencv.c  test.sh  train.sh
examples/batch_norm/: README.md
examples/mnist/: lenet_solver.prototxt  mnist_autoencoder.minmax.prototxt  mnist_autoencoder.relus.prototxt  mnist_autoencoder_solver.prototxt  train_lenet.sh  train_mnist_autoencoder.sh  train_mnist_autoencoder_adagrad.sh
examples/topics/: binary_category_data.hdf5  embed_filelist.txt  filelist.test.txt  filelist.txt  hello_embed_filelist.txt  hello_embed_net.prototxt  hello_filelist.txt  hello_flat_filelist.txt  hello_flat_net.prototxt  hello_flat_world_data.hdf5  hello_net.prototxt  hello_net.prototxt2  hello_net.py  hello_solver.prototxt  hello_test.sh  hello_world_data.hdf5  hello_world_embed_data.hdf5  prepare_hello_flat_world_net.py  prepare_hello_net.py  prepare_hello_world_embed_net.py  solver.prototxt  test_categories.h5  test_classification.sh  topics_net.prototxt  topics_net.prototxt2  train_categories.h5
examples/xor_hello_world/: solver.prototxt  test_xor_hello_world.sh  xor_net.minimal.prototxt2  xor_net.prototxt  (+1 more)
include/: H5pubconf.h  boost  cblas  cblas.h  gflags  google  openblas_config.h
python/: draw_net.py  test.py
tools/: Makefile  cmake_install.cmake
(+110 files in other folders)
